# agent-trust-layer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
atl/: __init__.py  gate.py  hitl.py  middleware.py  observability.py  policy.py  provenance.py  types.py
atl/integrations/: __init__.py  langgraph.py
atl/packs/: __init__.py  vn.py
eval/: harness.py  metrics.py  workload.py
examples/: langgraph_agent.py  multi_agent_demo.py  vn_governance_demo.py
tests/: test_gate.py  test_langgraph_integration.py  test_middleware.py  test_observability.py  test_policy.py  test_provenance.py  test_vn_pack.py
